# axum-server-starter

./: Cargo.toml  LICENSE  Readme.md
.github/workflows/: check.yml  pubilsh.yml  publish.yml
codegen/axum-starter-macro/: Cargo.toml
codegen/axum-starter-macro/src/: lib.rs  utils.rs
codegen/axum-starter-macro/src/derive_config/: code_gen.rs  derive_inputs.rs  mod.rs
codegen/axum-starter-macro/src/derive_provider/: code_gen.rs  mod.rs
codegen/axum-starter-macro/src/derive_provider/macro_models/: derive_model.rs  fields.rs  mod.rs  type_mapper.rs
codegen/axum-starter-macro/src/from_state_collector/: code_gen.rs  input.rs  mod.rs
codegen/axum-starter-macro/src/prepare_macro/: code_gen.rs  mod.rs
codegen/axum-starter-macro/src/prepare_macro/inputs/: attr_name.rs  input_fn.rs
codegen/derive_config_provider/: Cargo.toml
codegen/derive_config_provider/src/: code_gen.rs  lib.rs  utils.rs
codegen/derive_config_provider/src/marco_models/: derive_model.rs  fields.rs
codegen/derive_starter/: Cargo.toml
codegen/derive_starter/src/: code_gen.rs  lib.rs  utils.rs
codegen/derive_starter/src/derive_provider/: code_gen.rs  mod.rs
codegen/derive_starter/src/derive_provider/macro_models/: mod.rs
codegen/derive_starter/src/derive_provider/marco_models/: derive_model.rs  mod.rs
codegen/derive_starter/src/marco_models/: derive_model.rs
codegen/derive_starter/src/prepare_macro/: code_gen.rs  mod.rs
codegen/derive_starter/src/prepare_macro/inputs/: attr_name.rs  input_fn.rs  mod.rs
examples/: basic.rs  minest_example.rs  prepare_expand.rs  simple.rs  test_starter.rs
src/: fake_span.rs  into_effect.rs  lib.rs  log_macro.rs  prepare_handler.rs  prepared_effect.rs  server_ready.rs
src/config_provide/: from_config.rs  mod.rs  provider.rs
src/effect_utils/: extension.rs  graceful.rs  middleware.rs  mod.rs  router.rs  service.rs  state.rs
src/prepare_behave/: mod.rs
src/prepare_behave/effect_collectors/: mod.rs  state_collector.rs
src/prepare_behave/effect_contain/: mod.rs  prepare.rs
src/prepare_behave/traits/: mod.rs  prepare_graceful_shutdown.rs  prepare_middleware.rs  prepare_route.rs  prepare_state.rs  router.rs  service.rs
src/prepare_sets/: concurrent_set.rs  mod.rs  serial_set.rs
src/server_prepare/: adding_middleware.rs  adding_prepare.rs  configure.rs  decorator.rs  error.rs  graceful_shutdown.rs  mod.rs  post_prepare.rs  pre_initial.rs  prepare.rs  serve_bind.rs  state_ready.rs
src/server_prepare/prepare/: base.rs  mod.rs  test.rs
src/server_prepare/start_process/: adding_middleware.rs  adding_prepare.rs  configure.rs  graceful_shutdown.rs  logger.rs  mod.rs  post_prepare.rs  state_ready.rs
src/test_utils/: mod.rs  test_response.rs
