[package]
name = "axum-starter"
version = "0.10.0"
edition = "2021"
authors = ["FrozenString<frozenstringstable@gmail.com>"]
description = "A help crate for simplify the code of starting a axum server"
homepage = "https://github.com/Goodjooy/axum-server-starter"
documentation = "https://docs.rs/axum-starter"
readme = "./Readme.md"
license = "MIT"
keywords = ["web", "http", "axum"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
logger = ["dep:tracing"]

[workspace]
members = ["./codegen/axum-starter-macro", "./examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7"
axum-starter-macro = { version = "0.10.0" }
futures = "0.3"
http-body = "1.0.0"
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1.3", features = ["server"] }
tap = "1"
thiserror = "1"
tokio = { version = "1.21.2", features = ["io-util"] }
tower = "0.4"
tracing = { version = "0.1", features = ["log"], optional = true }

[dev-dependencies]
tower-http = { version = "0.5", features = [
    "catch-panic",
    "trace",
    "metrics"
] }
tokio = { version = "1", features = ["full"] }
simple_logger = "4.0.0"
log = "0.4"
axum = { version = "0.7", features = ["macros"] }
