[package]
name = "axum-starter"
version = "0.11.0"
edition = "2021"
authors = ["FrozenString<frozenstringstable@gmail.com>"]
description = "A help crate for simplify the code of starting a axum server"
homepage = "https://github.com/Goodjooy/axum-server-starter"
documentation = "https://docs.rs/axum-starter"
readme = "./Readme.md"
license = "MIT"
keywords = ["web", "http", "axum"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name="test_starter"
required-features=["test-utils","logger"]

[features]
default = []
logger = ["dep:tracing"]
test-utils = ["http-body-util", "serde", "serde_json", "bytes"]
http-body-util = ["dep:http-body-util"]
serde = ["dep:serde"]
serde_json = ["dep:serde_json"]
bytes = ["dep:bytes"]

[workspace]
members = ["./codegen/axum-starter-macro", "./examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7"
bytes = { version = "1.6.0", optional = true }
axum-starter-macro = { version = "0.10.0" }
futures = "0.3"
http = "1.1.0"
http-body = "1.0.0"
http-body-util = { version = "0.1.1", optional = true }
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1.3", features = ["server"] }
serde = { version = "1.0.203", optional = true }
serde_json = { version = "1.0.117", optional = true }
tap = "1"
thiserror = "1"
tokio = { version = "1.21.2", features = ["io-util"] }
tower = "0.4"
tracing = { version = "0.1", features = ["log"], optional = true }

[dev-dependencies]
tower-http = { version = "0.5", features = ["catch-panic", "trace", "metrics"] }
tokio = { version = "1", features = ["full"] }
simple_logger = "4.0.0"
log = "0.4"
axum = { version = "0.7", features = ["macros"] }
