[package]
name = "axum-starter-macro"
version = "0.3.0"
edition = "2021"
authors = ["FrozenString<frozenstringstable@gmail.com>"]
description = "A help crate for simplify the code of starting axum server "
homepage = "https://github.com/Goodjooy/axum-server-starter"
documentation = "https://docs.rs/axum-starter"
license = "MIT"
keywords = ["web", "http", "axum"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0.46"
quote = "1.0.21"
syn = "1.0.102"

